Created birdwatcher.ml.inference and get_trained_inference_pipeline function within. Function currently retreives an inference pipeline that successfully preps, processes, generates features and scores.

--- a/src/birdwatcher/config/training_config.yaml
+++ b/src/birdwatcher/config/training_config.yaml
@@ -1,13 +1,14 @@
 ########## Information for Model Training ##########
-train_test_info:
-  test_size: 0.2
-  random_state: 123
+test_size: &test_size 0.2
+random_state: &random_state 123
 
 pca_kwargs:
   cumulative_variance_target: 0.8
+  random_state: *random_state
 
 model_params:
   l1_ratio: 0.05
   penalty: elasticnet
   solver: saga
   n_jobs: -1
+  random_state: *random_state
