Added birdwatcher.ml.inference.perform_pipeline_inference and created summarize sub-package.

--- a/src/birdwatcher/config/paths.yaml
+++ b/src/birdwatcher/config/paths.yaml
@@ -22,6 +22,10 @@ tfidf_data: &tfidf_data
   !osjoin 
     - *cache_path
     - "tfidf_data"
+score_paths: &score_paths
+  !osjoin
+    - *cache_path
+    - "scores"
 
 # Raw Data Paths
 sentiment140_path_raw: &sentiment140_path_raw 
@@ -97,3 +101,5 @@ twitter_fpath_tfidf: &twitter_fpath_tfidf
   !osjoin
     - *tfidf_data
     - "twitter"
+
+# Score Paths
