--- a/setup.cfg
+++ b/setup.cfg
@@ -20,6 +20,7 @@ packages =
     birdwatcher.datacollection
     birdwatcher.dataprep
     birdwatcher.ml
+    birdwatcher.summarize
 python_requires = >=3.8
 install_requires =
     boto3 >= 1.26.0
