Created birdwatcher.summarize.summarize.generate_save_pire_chart function.

--- a/src/birdwatcher/config/paths.yaml
+++ b/src/birdwatcher/config/paths.yaml
@@ -22,7 +22,7 @@ tfidf_data: &tfidf_data
   !osjoin 
     - *cache_path
     - "tfidf_data"
-score_paths: &score_paths
+scores_path: &scores_path
   !osjoin
     - *cache_path
     - "scores"
