Created summarize_config and started PostProcessor class definition. Working on save method.

--- a/src/birdwatcher/config/paths.yaml
+++ b/src/birdwatcher/config/paths.yaml
@@ -26,6 +26,10 @@ scores_path: &scores_path
   !osjoin
     - *cache_path
     - "scores"
+post_processing_path: &post_processing_path
+  !osjoin
+    - *cache_path
+    - "post_processing"
 
 # Raw Data Paths
 sentiment140_path_raw: &sentiment140_path_raw 
