--- a/setup.cfg
+++ b/setup.cfg
@@ -23,6 +23,7 @@ packages =
     birdwatcher.summarize
 python_requires = >=3.8
 install_requires =
+    awswrangler >= 2.0.0
     boto3 >= 1.26.0
     langdetect >= 1.0.0
     matplotlib >= 3.7.0
