--- a/environment.yml
+++ b/environment.yml
@@ -18,5 +18,6 @@ dependencies:
       - pytest==7.2.1
       - s3fs==0.4.2
       - scikit-learn==1.2.1
+      - streamlit==1.23.1
+      - tqdm==4.64.1
       - tweepy==4.4.0
-      - wandb==0.13.3
