--- a/environment.yml
+++ b/environment.yml
@@ -7,6 +7,7 @@ dependencies:
   - pandas=1.2.4
   - pip=22.2.2
   - pip:
+      - awswrangler==3.2.1
       - boto3==1.26.74
       - fsspec==2023.1.0
       - ipykernel==6.16.0
