--- a/environment.yml
+++ b/environment.yml
@@ -17,6 +17,7 @@ dependencies:
       - pyarrow==11.0.0
       - pydantic==1.10.5
       - pytest==7.2.1
+      - pyyaml==6.0.0
       - s3fs==0.4.2
       - scikit-learn==1.2.1
       - streamlit==1.23.1
