Moved ml .pkl files to s3.

--- a/src/birdwatcher/config/paths.yaml
+++ b/src/birdwatcher/config/paths.yaml
@@ -106,4 +106,20 @@ twitter_fpath_tfidf: &twitter_fpath_tfidf
     - *tfidf_data
     - "twitter"
 
-# Score Paths
+# ML Paths
+s3_ml_path: &s3_ml_path
+  !osjoin
+    - *s3_bucket
+    - "ml"
+training_pipeline_path: !osjoin
+  - *s3_ml_path
+  - "training_pipeline.pkl"
+tfidf_vectorizer_path: !osjoin
+  - *s3_ml_path
+  - "tfidf_vectorizer.pkl"
+pca_path: !osjoin
+  - *s3_ml_path
+  - "trained_pca.pkl"
+model_path: !osjoin
+  - *s3_ml_path
+  - "trained_model.pkl"
