Modified necessary pickle loads to use s3_load_pickle since ml pickle files were moved to s3.

--- a/src/birdwatcher/config/paths.yaml
+++ b/src/birdwatcher/config/paths.yaml
@@ -111,15 +111,7 @@ s3_ml_path: &s3_ml_path
   !osjoin
     - *s3_bucket
     - "ml"
-training_pipeline_path: !osjoin
-  - *s3_ml_path
-  - "training_pipeline.pkl"
-tfidf_vectorizer_path: !osjoin
-  - *s3_ml_path
-  - "tfidf_vectorizer.pkl"
-pca_path: !osjoin
-  - *s3_ml_path
-  - "trained_pca.pkl"
-model_path: !osjoin
-  - *s3_ml_path
-  - "trained_model.pkl"
+training_pipeline_path: "training_pipeline.pkl"
+tfidf_vectorizer_path: "tfidf_vectorizer.pkl"
+pca_path: "trained_pca.pkl"
+model_path: "trained_model.pkl"
